[project]
name = "dreamsculpt_be"
version = "0.0.3"
description = "Backend server for DreamSculpt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "diffusers>=0.35.1",
    "fastapi>=0.116.1",
    "gguf>=0.17.1",
    "huggingface-hub>=0.34.5",
    "numpy>=2.3.3",
    "protobuf>=6.33.2",
    "sentencepiece>=0.2.1",
    "transformers>=4.56.2",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend="uv_build"

[project.scripts]
start = "dreamsculpt_be.main:main"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "torch>=2.8.0",
]
